--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
         </section>
         <!--услуги-->
-        <section class="services section">
+        <section class="services">
             <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="services-list list">
@@ -140,13 +140,11 @@
         <div class="container">
             <a class=" footer-logo logo link" href=""><span class="logo-item">Web</span><span
                     class="logo-footer-white">Studio</span></a>
-            <div class="container-adres">
-                <address class="footer-addres">г. Киев, пр-т Леси Украинки, 26</address>
-                <address class="footer-contacts">
-                    <a class="footer-mail link" href="mailto:info@devstudio.com">info@devstudio.com <br></a>
-                    <a class="footer-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
-                </address>
-            </div>
+            <address class="footer-addres">г. Киев, пр-т Леси Украинки, 26</address>
+            <address class="footer-contacts">
+                <a class="footer-mail link" href="mailto:info@devstudio.com">info@devstudio.com <br></a>
+                <a class="footer-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </address>
         </div>
     </footer>
 
