--- a/portfolio.html
+++ b/portfolio.html
@@ -148,15 +148,14 @@
     <!--footer section-->
     <footer class="footer">
         <div class="container">
-            <a class="logo link" href=""> <span class="logo-item">Web</span><span
+            <a class="footer-logo logo link" href=""> <span class="logo-item">Web</span><span
                     class="logo-footer-white">Studio</span></a>
-            <div class="container-adres">
-                <address class="footer-addres">г. Киев, пр-т Леси Украинки, 26</address>
-                <address class="footer-contacts">
-                    <a class="footer-mail link" href="mailto:info@devstudio.com">info@devstudio.com <br> </a>
-                    <a class="footer-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
-                </address>
-            </div>
+            <address class="footer-addres">г. Киев, пр-т Леси Украинки, 26</address>
+            <address class="footer-contacts">
+                <a class="footer-mail link" href="mailto:info@devstudio.com">info@devstudio.com <br> </a>
+                <a class="footer-phone link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </address>
+
         </div>
     </footer>
 </body>
